crates/nash-codegen/src/snapshots/nash_codegen__decision_tree__tests__big_list_tail_binding_is_only_reconstructed_when_used@used.snap
---
source: crates/nash-codegen/src/decision_tree_tests.rs
assertion_line: 858
description: "let match#2 : List Int = (con data (List [I 1, I 2])) in\ncase@List unListData match#2 of\n  Nil -> error\n  Cons field#3 listTail#5 -> let field#4 : List Int = listData listTail#5 in\n  let tail#1 : List Int = field#4 in\n  tail#1"
---
--- unoptimized Core
let match#2 : List Int = (con data (List [I 1, I 2])) in
case@List unListData match#2 of
  Nil -> error
  Cons field#3 listTail#5 -> let field#4 : List Int = listData listTail#5 in
  let tail#1 : List Int = field#4 in
  tail#1
--- unoptimized UPLC
(program 1.1.0
  [(lam match_2
    (case
      [(builtin unListData) match_2]
      (lam field_3
        (lam listTail_5
          [(lam field_4 [(lam tail_1 tail_1) field_4]) [(builtin listData) listTail_5]]))
      (error)))
    (con data (List [I 1, I 2]))])
--- optimized Core
let anf#11 : list Int = unListData (con data (List [I 1, I 2])) in
case@List anf#11 of
  Nil -> error
  Cons field#7 listTail#8 -> listData listTail#8
--- optimized UPLC
(program 1.1.0
  [(lam anf_1
    (case
      anf_1
      (lam field_2 (lam listTail_3 [(builtin listData) listTail_3]))
      (error)))
    [(builtin unListData) (con data (List [I 1, I 2]))]])
--- result
(con data (List [I 2]))
--- logs
[]
--- budget
cpu: 347885, memory: 1964
